--- a/DevBox/devbox.yaml
+++ b/DevBox/devbox.yaml
@@ -10,14 +10,15 @@ setupTasks:
   - task: powershell
     inputs:
       command: |
-        # Install WSL2 distros
-        wsl --install -d Ubuntu-22.04
-
         # Install robot framework
-        python.exe -m pip install --upgrade pip
+        python.exe -m pip install --upgrade pip;
         pip install robotframework
   - task: powershell
     inputs:
       command: |
+        # Install WSL2 distros
+        wsl --install -d Ubuntu-22.04;
+
+        # Install VSCode extensions
         code --install-extension ms-python.python
       runAsUser: true
