add vscode extension for robotframework and wsl

--- a/DevBox/devbox.yaml
+++ b/DevBox/devbox.yaml
@@ -20,5 +20,7 @@ setupTasks:
         wsl --install -d Ubuntu-22.04;
 
         # Install VSCode extensions
-        code --install-extension ms-python.python
+        code --install-extension ms-python.python;
+        code --install-extension ms-vscode-remote.remote-wsl;
+        code --install-extension d-biehl.robotcode
       runAsUser: true
